2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs:
	* MonoDevelop.SourceEditor/LanguageItemTooltipProvider.cs:
	* MonoDevelop.SourceEditor/CompileErrorTooltipProvider.cs: fixed 'Bug
	442099 - Empty code info tooltips should not be shown'.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Bump MD version.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Removed options which are not
	really contextual.

2008-11-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Add border around text
	editor to give it definition when UI and colours schemes are both
	light or dark.

2008-11-05  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/ClassQuickFinder.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Fixed some
	warnings/cosmetic changes.

2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Implement
	Indent/Unindent/ToggleComment commands directly on the editor instead
	of implementing removed ICodeStyleOperations interface. Rename some
	methods. Disable comment toggling command if language binding has
	null single line comment value, so it no longer breaks on
	XML/HTML/ASP.NET etc. Workaround for enhancement bugs "433644 -
	'toggle line comment(s)' within script tags in aspx file fails" and
	"440592 - 'toggle line comment(s)' in xml file should add comment
	tags ('<!--', '-->')".

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: fixed 'Bug 439552
	- Search in document doesn't work properly'.

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Handled the
	resetTimerId differently.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Made the case a.Count ==